# stronghold-ui

./: .gitignore  Config.hs.example  Github.hs  Jenkinsfile  JsonDiff.hs  Procfile  README.md  Types.hs  URI.hs  Views.hs  cide.yml  config_file.conf.example  stack.yaml  stronghold-ui.cabal  strongholdui.hs
Database/: Stronghold.hs
assets/css/: hierarchy.css  json_diff.css  login.css  node.css  test.html
assets/js/: node.js  stable-stringify.js  version.js
script/: build  ci-before
