name:                stronghold-ui
version:             0.1
build-type:          Simple
cabal-version:       >=1.8

executable stronghold-ui
  main-is:             strongholdui.hs
  build-depends:       HTTP == 4000.2.10
                     , HUnit == 1.2.5.2
                     , MonadCatchIO-transformers == 0.3.1.0
                     , MonadRandom == 0.1.12
                     , SHA == 1.6.2.1
                     , aeson == 0.6.2.1
                     , array == 0.4.0.1
                     , asn1-data == 0.7.1
                     , asn1-types == 0.2.3
                     , attoparsec == 0.10.4.0
                     , attoparsec-enumerator == 0.3.1
                     , base == 4.6.*
                     , base-unicode-symbols == 0.2.2.4
                     , base64-bytestring == 1.0.0.1
                     , bifunctors == 4.1.1
                     , binary == 0.5.1.1
                     , blaze-builder == 0.3.3.2
                     , blaze-builder-conduit == 1.0.0
                     , blaze-builder-enumerator == 0.2.0.5
                     , blaze-html == 0.6.1.2
                     , blaze-markup == 0.5.1.6
                     , byteable == 0.1.1
                     , bytestring == 0.10.0.2
                     , bytestring-mmap == 0.2.2
                     , bytestring-show == 0.3.5.5
                     , case-insensitive == 0.4.0.4
                     , cereal == 0.4.0.1
                     , certificate == 1.3.9
                     , cipher-aes == 0.2.6
                     , cipher-rc4 == 0.1.4
                     , clientsession == 0.9.0.3
                     , comonad == 4.0
                     , conduit == 1.0.9.3
                     , configurator == 0.2.0.2
                     , containers == 0.5.0.0
                     , contravariant == 0.4.4
                     , cookie == 0.4.0.1
                     , cprng-aes == 0.5.2
                     , crypto-api == 0.12.2.2
                     , crypto-cipher-types == 0.0.9
                     , crypto-numbers == 0.2.3
                     , crypto-pubkey == 0.2.4
                     , crypto-pubkey-types == 0.4.1
                     , crypto-random == 0.0.7
                     , cryptohash == 0.11.1
                     , data-default == 0.5.3
                     , data-default-class == 0.0.1
                     , data-default-instances-base == 0.0.1
                     , data-default-instances-containers == 0.0.1
                     , data-default-instances-dlist == 0.0.1
                     , data-default-instances-old-locale == 0.0.1
                     , deepseq == 1.3.0.1
                     , directory == 1.2.0.1
                     , directory-tree == 0.11.0
                     , distributive == 0.3.2
                     , dlist == 0.6.0.1
                     , either == 4.1
                     , entropy == 0.2.2.4
                     , enumerator == 0.4.20
                     , errors == 1.4.5
                     , extensible-exceptions == 0.1.1.4
                     , failure == 0.2.0.1
                     , filepath == 1.3.0.1
                     , generic-deriving == 1.6.2
                     , ghc-prim == 0.3.0.0
                     , hashable == 1.2.1.0
                     , heist == 0.13.0.3
                     , hoauth2 == 0.3.0
                     , http-conduit == 1.9.5.2
                     , http-types == 0.7.3.0.1
                     , integer-gmp == 0.5.0.0
                     , lens == 3.10.1
                     , lifted-base == 0.2.1.1
                     , logict == 0.6.0.1
                     , mime-types == 0.1.0.3
                     , mmorph == 1.0.1
                     , monad-control == 0.3.2.2
                     , monads-tf == 0.1.0.1
                     , mtl == 2.1.2
                     , mwc-random == 0.13.1.0
                     , nats == 0.1.2
                     , network == 2.4.2.2
                     , old-locale == 1.0.0.5
                     , old-time == 1.1.0.1
                     , parallel == 3.2.0.4
                     , parsec == 3.1.4
                     , pem == 0.2.1
                     , pretty == 1.1.1.0
                     , primitive == 0.5.1.0
                     , process == 1.1.0.2
                     , profunctors == 4.0.2
                     , publicsuffixlist == 0.1
                     , pwstore-fast == 2.4.1
                     , random == 1.0.1.1
                     , reflection == 1.3.2
                     , regex-base == 0.93.2
                     , regex-compat == 0.95.1
                     , regex-posix == 0.95.2
                     , resourcet == 0.4.5
                     , rts == 1.0
                     , safe == 0.3.3
                     , securemem == 0.1.3
                     , semigroupoids == 4.0
                     , semigroups == 0.12.1
                     , skein == 1.0.8
                     , snap == 0.13.1.2
                     , snap-core == 0.9.5.0
                     , snap-server == 0.9.3.4
                     , socks == 0.5.4
                     , split == 0.2.2
                     , stm == 2.4.2
                     , syb == 0.4.1
                     , tagged == 0.7
                     , template-haskell == 2.8.0.0
                     , text == 0.11.3.1
                     , time == 1.4.0.1
                     , tls == 1.1.5
                     , tls-extra == 0.6.6
                     , transformers == 0.3.0.0
                     , transformers-base == 0.4.1
                     , transformers-compat == 0.1.1.1
                     , unix == 2.6.0.1
                     , unix-compat == 0.4.1.1
                     , unordered-containers == 0.2.3.3
                     , utf8-string == 0.3.7
                     , vector == 0.10.9.1
                     , vector-algorithms == 0.6.0.1
                     , void == 0.6.1
                     , xmlhtml == 0.2.3
                     , zlib == 0.5.4.1
                     , zlib-bindings == 0.1.1.3
                     , zlib-conduit == 1.0.0
                     , zlib-enum == 0.2.3
