name:                stronghold-ui
version:             0.1
build-type:          Simple
cabal-version:       >=1.8

executable stronghold-ui
--  ghc-options:        -ddump-minimal-imports
  main-is:             strongholdui.hs
  build-depends:       base
                     , aeson
                     , blaze-html
                     , bytestring
                     , configurator
                     , containers
                     , hoauth2
                     , http-conduit
                     , HTTP
                     , lens
                     , network-uri
                     , snap
                     , snap-core
                     , text
                     , time
                     , unordered-containers
                     , vector
